# Atomic-Scraper-Service

./: .dockerignore  .env.example  .env.local-backup  .gitignore  AGENTS.md  Dockerfile  ENDPOINTS.md  LICENSE  PLAN_PROXY_AND_MONITORING_FIX.md  README.md  REVIEW-auto-monitor-ml-cv.md  STRUCTURE.md  Webshare 10 proxies.txt  api_full_test.ipynb  check_registry.py  debug_output.txt  docker-compose.override.yml  docker-compose.yml  ecosystem.config.js  ecosystem.llama-deep.config.js  kill_mcp.py  llama.txt  main.py  out_noproxy_vpn-on.json  out_proxy_vpn-on.json  playwright_orchestrator_plan_2.md  proxies.txt  pyproject.toml  requirements.txt  research_agent_plan.md  restart_mcp.py  run.py  test_all_interactions.py  test_google_debug.py  test_keys.py  test_stability.py  test_ws.py  to-the-unified-specs.txt  web_interactions.md
.claude/: settings.local.json
ab_test/: REPORT_ab_prefill.md  ab_compare.py  ab_run.py  enrich_context.py
design-notes/: batched-inference.md
docs/: Vane_RESEARCH_PIPELINE.md  jina_ai_DEEP_RESEARCH_PIPELINE.md  own_opinion.md  research-agent-fixes-2026-05-20.md  yandex-maps-scraping-experiment-journal.md  yandex-maps-scraping.md  как мне не попадать на google....md  про проблемы с serper.md  я ищу репозитории на github ан....md
experiment_monitoring/: EXPERIMENTS-REPORT.md
monitor-test/: hits.jsonl  monitor.out  monitor.py  seen.json
optimize-scrape/: FINDINGS.md  PLAN.md  analyze_traffic.py  estimate_savings.py  exp_compare.py  exp_results.json  make_httpx_snapshots.py  probe_brotli.py  probe_vk_2gis.py  sample_urls.py
parse-yandex-economy-experiment/: 01_grid_sim.py  02_traffic_probe.py  03_httpx_ssr.py  04_httpx_reliability.py  05_reviews_probe.py  06_reviews_ssr_detail.py  07_reviews_paginate.py  08_reviews_browser_capture.py  09_org_card.py  10_reviews_recent.py  11_card_content.py  README.md
perf_analysis/: ANALYSIS.md  aggregate_card_perf.py  mine_llama_log.py  mine_worker_log.py  plot_ctx_by_kind.py  plot_monitor_metrics.py
proxy_experiment/: test_proxies.py  test_sticky.py
reports/: portfolio-report.md
(+700 files in other folders)
