[project]
name = "atomic-scraper-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.28.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.3.0",
    "ruff>=0.15.6",
    "taskiq-redis>=1.2.2",
    "taskiq>=0.12.1",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    "fastmcp>=3.1.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
