[project]
name = "atomic-scraper-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1",
    "jsonschema>=4.20",
    "numpy>=1.26",
    "openai>=2.28.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.30",
    "python-multipart>=0.0.9",
    "redis>=7.3.0",
    "ruff>=0.15.6",
    "sqlalchemy[asyncio]>=2.0",
    "taskiq-redis>=1.2.2",
    "taskiq>=0.12.1",
    "testcontainers[postgres]>=4.7",
    "torch>=2.4",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    "fastmcp>=3.1.1",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "markdownify>=1.2.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v -m 'not slow'"
markers = [
    "e2e: live end-to-end tests that require a running server and proxy (deselect with -m 'not e2e')",
    "slow: slow tests that require network/downloads (deselect with -m 'not slow')",
]
